Fixed various text sizing and section sizing issues on mobile. Removed links from 'more fresh features'.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -480,6 +480,9 @@ rl-ka-refer-landing {
         font-weight: 800;
         margin-top: -20px;
         width: 100%; }
+        @media screen and (max-width: 320px) {
+          rl-ka-refer-landing videoplayer-selector .text .title {
+            font-size: 1.2em; } }
       rl-ka-refer-landing videoplayer-selector .text .button {
         font-size: 0.8em;
         position: relative;
@@ -544,6 +547,9 @@ rl-ka-refer-landing {
   rl-ka-refer-landing features .row {
     width: 100%;
     height: 300px; }
+  @media screen and (max-width: 320px) {
+    rl-ka-refer-landing features .row {
+      height: 180px; } }
   rl-ka-refer-landing features .ka-landing-feature-icon {
     width: 100px;
     height: 100px;
@@ -563,12 +569,23 @@ rl-ka-refer-landing {
       bottom: 0;
       left: 0;
       right: 0; }
+    @media screen and (max-width: 320px) {
+      rl-ka-refer-landing features .ka-landing-feature-icon {
+        width: 60px;
+        height: 60px;
+        top: 20px; }
+        rl-ka-refer-landing features .ka-landing-feature-icon img {
+          width: 45px;
+          height: 45px; } }
   rl-ka-refer-landing features .ka-landing-feature-title {
     text-transform: uppercase;
     width: 100%;
     top: 165px;
     text-align: center;
     color: #CC0000; }
+    @media screen and (max-width: 320px) {
+      rl-ka-refer-landing features .ka-landing-feature-title {
+        top: 95px; } }
   rl-ka-refer-landing features .ka-landing-feature-button-over {
     opacity: 0;
     z-index: 2;
@@ -620,6 +637,9 @@ rl-ka-refer-landing {
     @media screen and (max-width: 768px) {
       rl-ka-refer-landing features .ka-landing-feature-button {
         margin: 3px; } }
+    @media screen and (max-width: 320px) {
+      rl-ka-refer-landing features .ka-landing-feature-button {
+        height: 175px; } }
     rl-ka-refer-landing features .ka-landing-feature-button .ka-landing-feature-button-up {
       position: relative;
       z-index: 1; }
@@ -635,6 +655,10 @@ rl-ka-refer-landing {
       margin-left: auto;
       margin-right: auto;
       margin-top: 10px; }
+      @media screen and (max-width: 320px) {
+        rl-ka-refer-landing features .ka-landing-feature-button .ka-landing-feature-rule {
+          top: 130px;
+          width: 60px; } }
   rl-ka-refer-landing features feature-button:first-of-type .ka-landing-feature-button {
     margin-left: 0px; }
   rl-ka-refer-landing features feature-button:last-of-type .ka-landing-feature-button {
@@ -674,7 +698,6 @@ rl-ka-refer-landing {
       rl-ka-refer-landing product-selector product-slide:first-of-type {
         position: relative; } }
     rl-ka-refer-landing product-selector > .row {
-      overflow: hidden;
       background-image: url("../../public/images/refer-select-shadow.png");
       background-repeat: no-repeat;
       background-position-y: 150px; }
@@ -706,7 +729,8 @@ rl-ka-refer-landing {
       top: 325px;
       width: 115px;
       height: 30px;
-      opacity: 0; }
+      opacity: 0;
+      display: none; }
       @media screen and (max-width: 685px) {
         rl-ka-refer-landing product-selector learn-more-button {
           transform: scale(1.5, 1.5);
@@ -773,6 +797,9 @@ rl-ka-refer-landing {
       padding: 0 2px; }
       rl-ka-refer-landing product-selector-nav .product img, rl-ka-refer-landing product-selector-nav .see-all img {
         width: 100%; }
+    rl-ka-refer-landing product-selector-nav .see-all {
+      width: 13%;
+      margin-left: 1%; }
     @media screen and (max-width: 820px) {
       rl-ka-refer-landing product-selector-nav .product {
         width: 16.5%; } }
@@ -891,10 +918,16 @@ rl-ka-refer-landing {
       position: relative; }
     rl-ka-refer-landing more-features-feature .text-container:hover {
       opacity: 0.95; }
+      @media screen and (max-width: 400px) {
+        rl-ka-refer-landing more-features-feature .text-container:hover {
+          opacity: 0; } }
     rl-ka-refer-landing more-features-feature .text-container {
       display: flex;
+      display: -webkit-flex;
       align-items: center;
+      -webkit-align-items: center;
       justify-content: center;
+      -webkit-justify-content: center;
       position: absolute;
       width: 100%;
       height: 100%;
@@ -911,13 +944,16 @@ rl-ka-refer-landing {
         font-weight: 800;
         margin-top: 5px; }
       rl-ka-refer-landing more-features-feature .text-container-cell p {
-        text-align: center; }
+        text-align: center;
+        color: #FFF; }
     rl-ka-refer-landing more-features-feature .spacer-top {
       max-width: 50%;
-      align-self: flex-start; }
+      align-self: flex-start;
+      -webkit-align-self: flex-start; }
     rl-ka-refer-landing more-features-feature .spacer-bottom {
       max-width: 50%;
-      align-self: flex-end; }
+      align-self: flex-end;
+      -webkit-align-self: flex-end; }
     rl-ka-refer-landing more-features-feature img {
       width: 100%; }
     rl-ka-refer-landing more-features-feature .bottom-text {
