--- a/public/css/components/_features.scss
+++ b/public/css/components/_features.scss
@@ -3,6 +3,11 @@ features {
         width: 100%;
         height: 300px;
     }
+    @media screen and (max-width: 320px) {
+        .row {
+            height: 180px;
+        }
+    }
     .ka-landing-feature-icon {
         width: 100px;
         height: 100px;
@@ -24,6 +29,17 @@ features {
             left: 0;
             right: 0;
         }
+
+        @media screen and (max-width: 320px) {
+            width: 60px;
+            height: 60px;
+            top: 20px;
+
+            img {
+                width: 45px;
+                height: 45px;
+            }
+        }
     }
     
     .ka-landing-feature-title {
@@ -32,6 +48,10 @@ features {
         top: 165px;
         text-align: center;
         color: #CC0000;
+
+        @media screen and (max-width: 320px) {
+            top: 95px;
+        }
     }
 
     .ka-landing-feature-button-over{
@@ -96,6 +116,9 @@ features {
         @media screen and (max-width: 768px) {
             margin: 3px;
         }
+        @media screen and (max-width: 320px) {
+            height: 175px;
+        }
     
         .ka-landing-feature-button-up {
             position: relative;
@@ -116,6 +139,11 @@ features {
             margin-left: auto;
             margin-right: auto;
             margin-top: 10px;
+
+            @media screen and (max-width: 320px) {
+                top: 130px;
+                width: 60px;
+            }
         }
     }
 
