--- a/public/css/components/_more-features.scss
+++ b/public/css/components/_more-features.scss
@@ -36,12 +36,19 @@ more-features-feature {
 
 	.text-container:hover {
 		opacity: 0.95;
+
+		@media screen and (max-width: 400px) {
+			opacity: 0;
+		}
 	}
 
 	.text-container {
 	  display: flex;
+	  display: -webkit-flex;
 	  align-items: center;
+	  -webkit-align-items: center;
 	  justify-content: center;
+	  -webkit-justify-content: center;
 	  position: absolute;
 	  width: 100%;
 	  height: 100%;
@@ -60,17 +67,20 @@ more-features-feature {
 
 	  p {
 	  	text-align: center;
+	  	color: #FFF;
 	  }
 	}
 
 	.spacer-top {
 		max-width: 50%;
 	  align-self: flex-start;
+	  -webkit-align-self: flex-start;
 	}
 
 	.spacer-bottom {
 		max-width: 50%;
 	  align-self: flex-end;
+	  -webkit-align-self: flex-end;
 	}
 
 	img {
