--- a/public/css/components/_selector.scss
+++ b/public/css/components/_selector.scss
@@ -1,4 +1,5 @@
 product-selector {
+
 	width: 80%;
 	position: relative;
     
@@ -46,7 +47,6 @@ product-selector {
     }
 
     > .row{
-        overflow: hidden;
         background-image: url('../../public/images/refer-select-shadow.png');
         background-repeat: no-repeat;
         background-position-y: 150px;
@@ -80,6 +80,7 @@ product-selector {
         width: 115px;
         height: 30px;
         opacity: 0;
+        display: none;
 
         @media screen and (max-width: 685px) {
            transform: scale(1.5,1.5);
@@ -159,6 +160,11 @@ product-selector-nav {
         img {
             width: 100%;
         }
+    }
+
+    .see-all {
+        width: 13%;
+        margin-left: 1%;
     }
 
 
